--- a/nginx-conf/nginx-staging.conf
+++ b/nginx-conf/nginx-staging.conf
@@ -5,7 +5,20 @@ events {
 http {
 	server {
     listen 80;
-    server_name staging-ws.drrakeshyadav;
+    server_name staging-http.drrakeshyadav.in;
+
+    location / {
+        proxy_pass http://localhost:3002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+	}
+    server {
+    listen 80;
+    server_name staging-ws.drrakeshyadav.in;
 
     location / {
         proxy_pass http://localhost:3001;
@@ -18,20 +31,7 @@ http {
 	}
 	server {
     listen 80;
-    server_name staging-http.drrakeshyadav;
-
-    location / {
-        proxy_pass http://localhost:3002;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-	}
-	server {
-    listen 80;
-    server_name staging-fe.drrakeshyadav;
+    server_name staging-fe.drrakeshyadav.in;
 
     location / {
         proxy_pass http://localhost:3000;
