--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -8,4 +8,12 @@ jobs:
     name: Deploying everything to the staging cluster
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hi there"
+      - run: |
+          echo "${{secrets.SSH_PRIVATE_KEY}}" &> /ssh_key
+          ssh -i /ssh_key ubuntu@3.110.122.67
+          cd devops/ && git pull
+          pnpm install
+          pnpm run build
+          pm2 restart fe-server
+          pm2 restart http-server
+          pm2 restart ws-server
