fixing cd pipeline

--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - run: |
           echo "${{secrets.SSH_PRIVATE_KEY}}" &> /ssh_key
+          chmod 600 /ssh_key
           ssh -i /ssh_key ubuntu@3.110.122.67
           cd devops/ && git pull
           pnpm install
