fix cd pipeline

--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -11,6 +11,10 @@ jobs:
       - run: |
           mkdir -p ~/.ssh
           echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+          mkdir -p /home/runner/.ssh
+          ls /home/runner/.ssh
+          touch /home/runner/.ssh/known_hosts
+          echo "${{secrets.KNOWN_HOSTS}}" > ~/home/runner/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
           ssh -i ~/.ssh/id_rsa ubuntu@3.110.122.67
           cd devops/ && git pull
