fix cd pipeline

--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - run: |
           mkdir -p ~/.ssh
-          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
-          echo "${{secrets.KNOWN_HOSTS}}" &> ~/.ssh/known_hosts
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           ssh -i ~/.ssh/id_rsa ubuntu@3.110.122.67
           cd devops/ && git pull
           pnpm install
