fix cd pipeline

--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -13,10 +13,9 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           echo "${{ secrets.KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
-          ssh -i ~/.ssh/id_rsa ubuntu@3.110.122.67
-          cd devops/ && git pull
-          pnpm install
-          pnpm run build
-          pm2 restart fe-server
-          pm2 restart http-server
-          pm2 restart ws-server
+          ssh -i ~/.ssh/id_rsa ubuntu@3.110.122.67 -t "cd devops/ && git pull origin main &&
+          pnpm install &&
+          pnpm run build &&
+          pm2 restart fe-server &&
+          pm2 restart http-server &&
+          pm2 restart ws-server"
