--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -13,7 +13,9 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           echo "${{ secrets.KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
-          ssh -i ~/.ssh/id_rsa ubuntu@3.110.122.67 -t "cd devops/ && 
+          ssh -i ~/.ssh/id_rsa ubuntu@3.110.122.67 << 'EOF'
+          set -e
+          cd devops/ && 
           git reset --hard origin/main &&
           git clean -fd && git pull origin main &&
           export PATH=/home/ubuntu/.nvm/versions/node/v22.17.1/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin &&
@@ -22,4 +24,5 @@ jobs:
           pnpm run build &&
           pm2 restart fe-server &&
           pm2 restart http-server &&
-          pm2 restart ws-server"
+          pm2 restart ws-server
+          EOF
