--- a/.github/workflows/cd_production.yml
+++ b/.github/workflows/cd_production.yml
@@ -1,7 +1,7 @@
 name: Deploy to staging
 on:
   push:
-    branches: [main]
+    branches: [production]
 
 jobs:
   redeploy_everything:
@@ -17,7 +17,7 @@ jobs:
           set -e
           cd devops/ && 
           git reset --hard origin/main &&
-          git clean -fd && git pull origin main &&
+          git clean -fd && git pull origin production &&
           export PATH=/home/ubuntu/.nvm/versions/node/v22.17.1/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin &&
           npm install -g pnpm &&
           pnpm install &&
